testsuite/tests/typecheck/should_fail/TcCoercibleFail2.hs
import Data.Coerce (Coercible)

instance Coercible () ()

main = return ()
