testsuite/tests/typecheck/should_fail/TcCoercibleFail2.stderr

TcCoercibleFail2.hs:5:10: error:
    • Class ‘Coercible’ does not support user-specified instances.
    • In the instance declaration for ‘Coercible () ()’
